Fix documenti + unit test + listini