@@ -97,6 +97,8 @@ import it.tinna.smartdoc.shared.dto.tipipagamento.TipoPagamentoDto;
 import it.tinna.smartdoc.shared.dto.tipipagamento.TipoPagamentoDto;
 import net.sf.jasperreports.engine.JREmptyDataSource;
 import net.sf.jasperreports.engine.JRException;
+import it.tinna.smartdoc.server.util.ReportLoader;
+import net.sf.jasperreports.engine.JasperReport;
 import net.sf.jasperreports.engine.JasperRunManager;
 import net.sf.jasperreports.engine.data.JRBeanCollectionDataSource;
 
@@ -242,6 +244,9 @@ public class FattureDelegate extends BaseDelegate
                 }
             }
 
+            ConfigurazioneDao confDao = new ConfigurazioneDao(jdbcTemplate);
+            String tipoStore = confDao.getByKey(ISharedConstants.CONFIG_DOMAIN_GLOBAL, ISharedConstants.CONFIG_KEY_TIPOSTORE);
+
             double totaleMerce = 0;
             for ( ProdottoDocumentoDto pdDto : dto.getProdotti() )
             {
@@ -259,7 +264,7 @@ public class FattureDelegate extends BaseDelegate
                         pdDto.getProdottoDto().setDescrizione(pdDto.getFmDescrizione());
                         // pdDto.setDescUnitaMisura(pdDto.getFmUnitaMisura());
                     }
-                    pdDto.getProdottoDto().setDescrizioneDocumento();
+                    pdDto.getProdottoDto().setDescrizioneDocumento(tipoStore);
                 }
             }
             ft.setProdotti(dto.getProdotti());
@@ -446,7 +451,7 @@ public class FattureDelegate extends BaseDelegate
             }
             // verifico se la fattura è ad esigibilità differita e, se lo è,
             // inserisco una riga con l'indicazione e l'eventuale motivo
-            if ( dto.getEsigibilitaDifferita().intValue() == 1 )
+            if ( dto.getEsigibilitaDifferita() != null && dto.getEsigibilitaDifferita().intValue() == 1 )
             {
                 ProdottoDocumentoDto pdDto = new ProdottoDocumentoDto();
                 ProdottoDto pDto = new ProdottoDto();
@@ -470,7 +475,7 @@ public class FattureDelegate extends BaseDelegate
             }
             // verifico se la fattura è con split payment e, se lo è, inserisco
             // una riga con l'indicazione
-            if ( dto.getSplitPayment() == 1 )
+            if ( dto.getSplitPayment() != null && dto.getSplitPayment().intValue() == 1 )
             {
                 ProdottoDocumentoDto pdDto = new ProdottoDocumentoDto();
                 ProdottoDto pDto = new ProdottoDto();
@@ -627,27 +632,24 @@ public class FattureDelegate extends BaseDelegate
             JRBeanCollectionDataSource beanColDataSource = new JRBeanCollectionDataSource(Arrays.asList(ft));
             td.setDataSource(beanColDataSource);
             ConfigurazioneDao configurazioneDao = new ConfigurazioneDao(jdbcTemplate);
-            String baseDirTemplate = configurazioneDao.getByKey(ISharedConstants.CONFIGURAZIONE_DOMINIO_STAMPA, ISharedConstants.CONFIG_KEY_STAMPA_BASEDIR);
-            if ( StringUtils.isEmpty(baseDirTemplate) )
-            {
-                throw new Exception("Il parametro basedir per i template è vuoto o nullo");
-            }
-            Template t = new Template("name", new StringReader(baseDirTemplate), new Configuration(Configuration.DEFAULT_INCOMPATIBLE_IMPROVEMENTS));
-            Map<String, Object> model = new HashMap<>();
-            model.put("DB_KEY", DatabaseContextHolder.getClientDatabase());
-            String baseDir = FreeMarkerTemplateUtils.processTemplateIntoString(t, model);
+            
             String stampaAgente = StringUtils.defaultIfEmpty(configurazioneDao.getByKey(ISharedConstants.CONFIGURAZIONE_DOMINIO_STAMPA, ISharedConstants.CONFIG_KEY_STAMPA_AGENTE), "0");
-            td.getParameters().put("print_codagente", new Boolean(stampaAgente));
-            td.getParameters().put("SUBREPORT_DIR", baseDir);
+            td.getParameters().put("print_codagente", Boolean.valueOf("1".equals(stampaAgente) || "true".equalsIgnoreCase(stampaAgente)));
+            
+            // Load reports from classpath
+            JasperReport report = ReportLoader.getReport("fattura.jrxml");
+            JasperReport subreportScadenze = ReportLoader.getReport("fattura_scadenze.jrxml");
+            
+            td.getParameters().put("SUBREPORT_SCADENZE", subreportScadenze);
+
             byte[] bytes = null;
-            InputStream reportIs = FileUtils.openInputStream(new File(new StringBuilder(baseDir).append(ISharedConstants.FATTURA_TEMPLATE_NAME).toString()));
             if ( td.getDataSource() != null )
             {
-                bytes = JasperRunManager.runReportToPdf(reportIs, td.getParameters(), td.getDataSource());
+                bytes = JasperRunManager.runReportToPdf(report, td.getParameters(), td.getDataSource());
             }
             else
             {
-                bytes = JasperRunManager.runReportToPdf(reportIs, td.getParameters(), new JREmptyDataSource());
+                bytes = JasperRunManager.runReportToPdf(report, td.getParameters(), new JREmptyDataSource());
             }
             DocumentoWrapperDto result = new DocumentoWrapperDto();
             result.setFlusso(bytes);
@@ -916,6 +918,10 @@ public class FattureDelegate extends BaseDelegate
     @Transactional(rollbackFor = Throwable.class)
     public long insert(FatturaDto dto) throws SQLException
     {
+        if ( isExistentNumero(dto.getNumDocumento(), dto.getParticella(), dto.getDataDocumento(), dto.getFlFatturaElettronica(), dto.getTipoFattura(), dto.getId()) )
+        {
+            throw new SQLException("Il numero di documento " + dto.getNumDocumento() + (StringUtils.isNotBlank(dto.getParticella()) ? "/" + dto.getParticella() : "") + " è già presente per l'anno di riferimento.");
+        }
         FattureDao fattureDao = new FattureDao(jdbcTemplate);
         if ( (dto.getTipoFattura() == TipoFattura.FATTURA_PROFORMA || dto.getTipoFattura() == TipoFattura.FATTURA_ACCOMPAGNATORIA) && dto.getFlFatturaElettronica() == 1 )
         {
@@ -1053,7 +1059,7 @@ public class FattureDelegate extends BaseDelegate
                                     String data,
                                     int flFatturaElettronica,
                                     TipoFattura tipoFattura,
-                                    Integer id) throws SQLException
+                                    Long id) throws SQLException
     {
         FattureDao dao = new FattureDao(jdbcTemplate);
         if ( tipoFattura == TipoFattura.NOTA_DEBITO )
@@ -1071,6 +1077,10 @@ public class FattureDelegate extends BaseDelegate
     public void update(UtenteDto utenteDto,
                        FatturaDto dto) throws SQLException
     {
+        if ( isExistentNumero(dto.getNumDocumento(), dto.getParticella(), dto.getDataDocumento(), dto.getFlFatturaElettronica(), dto.getTipoFattura(), dto.getId()) )
+        {
+            throw new SQLException("Il numero di documento " + dto.getNumDocumento() + (StringUtils.isNotBlank(dto.getParticella()) ? "/" + dto.getParticella() : "") + " è già presente per l'anno di riferimento.");
+        }
         FattureDao fattureDao = new FattureDao(jdbcTemplate);
         FatturaDto existentDto = fattureDao.getById(dto.getId());
         dto.setTipoFattura(existentDto.getTipoFattura());
@@ -1102,15 +1112,6 @@ public class FattureDelegate extends BaseDelegate
         {
             prodottoDdtDto.setIdDocumento(dto.getId());
             fattureDao.insertProdotto(prodottoDdtDto);
-        }
-        fattureDao.deleteSpeseIncassoById(dto.getId());
-        if ( dto.getListaSpeseIncassoFattura() != null )
-        {
-            for ( SpesaIncassoDocumentoDto spesaIncassoDdtDto : dto.getListaSpeseIncassoFattura() )
-            {
-                spesaIncassoDdtDto.setIdFattura(dto.getId());
-                fattureDao.insertSpesaIncasso(spesaIncassoDdtDto);
-            }
         }
         fattureDao.deleteSpeseIncassoById(dto.getId());
         if ( dto.getListaSpeseIncassoFattura() != null )
