@@ -93,6 +93,8 @@ import it.tinna.smartdoc.shared.dto.tipipagamento.TipoPagamentoDto;
 import it.tinna.smartdoc.shared.dto.tipipagamento.TipoPagamentoDto;
 import net.sf.jasperreports.engine.JREmptyDataSource;
 import net.sf.jasperreports.engine.JRException;
+import it.tinna.smartdoc.server.util.ReportLoader;
+import net.sf.jasperreports.engine.JasperReport;
 import net.sf.jasperreports.engine.JasperRunManager;
 import net.sf.jasperreports.engine.data.JRBeanCollectionDataSource;
 
@@ -230,6 +232,9 @@ public class FattureFornitoreDelegate extends BaseDelegate
                 }
             }
 
+            ConfigurazioneDao confDao = new ConfigurazioneDao(jdbcTemplate);
+            String tipoStore = confDao.getByKey(ISharedConstants.CONFIG_DOMAIN_GLOBAL, ISharedConstants.CONFIG_KEY_TIPOSTORE);
+
             double totaleMerce = 0;
             for ( ProdottoDocumentoDto pdDto : dto.getProdotti() )
             {
@@ -247,7 +252,7 @@ public class FattureFornitoreDelegate extends BaseDelegate
                         pdDto.getProdottoDto().setDescrizione(pdDto.getFmDescrizione());
                         // pdDto.setDescUnitaMisura(pdDto.getFmUnitaMisura());
                     }
-                    pdDto.getProdottoDto().setDescrizioneDocumento();
+                    pdDto.getProdottoDto().setDescrizioneDocumento(tipoStore);
                 }
             }
             ft.setProdotti(dto.getProdotti());
@@ -434,7 +439,7 @@ public class FattureFornitoreDelegate extends BaseDelegate
             }
             // verifico se la fattura è ad esigibilità differita e, se lo è,
             // inserisco una riga con l'indicazione e l'eventuale motivo
-            if ( dto.getEsigibilitaDifferita().intValue() == 1 )
+            if ( dto.getEsigibilitaDifferita() != null && dto.getEsigibilitaDifferita().intValue() == 1 )
             {
                 ProdottoDocumentoDto pdDto = new ProdottoDocumentoDto();
                 ProdottoDto pDto = new ProdottoDto();
@@ -458,7 +463,7 @@ public class FattureFornitoreDelegate extends BaseDelegate
             }
             // verifico se la fattura è con split payment e, se lo è, inserisco
             // una riga con l'indicazione
-            if ( dto.getSplitPayment() == 1 )
+            if ( dto.getSplitPayment() != null && dto.getSplitPayment().intValue() == 1 )
             {
                 ProdottoDocumentoDto pdDto = new ProdottoDocumentoDto();
                 ProdottoDto pDto = new ProdottoDto();
@@ -587,27 +592,24 @@ public class FattureFornitoreDelegate extends BaseDelegate
             JRBeanCollectionDataSource beanColDataSource = new JRBeanCollectionDataSource(Arrays.asList(ft));
             td.setDataSource(beanColDataSource);
             ConfigurazioneDao configurazioneDao = new ConfigurazioneDao(jdbcTemplate);
-            String baseDirTemplate = configurazioneDao.getByKey(ISharedConstants.CONFIGURAZIONE_DOMINIO_STAMPA, ISharedConstants.CONFIG_KEY_STAMPA_BASEDIR);
-            if ( StringUtils.isEmpty(baseDirTemplate) )
-            {
-                throw new Exception("Il parametro basedir per i template è vuoto o nullo");
-            }
-            Template t = new Template("name", new StringReader(baseDirTemplate), new Configuration(Configuration.DEFAULT_INCOMPATIBLE_IMPROVEMENTS));
-            Map<String, Object> model = new HashMap<>();
-            model.put("DB_KEY", DatabaseContextHolder.getClientDatabase());
-            String baseDir = FreeMarkerTemplateUtils.processTemplateIntoString(t, model);
+
             String stampaAgente = StringUtils.defaultIfEmpty(configurazioneDao.getByKey(ISharedConstants.CONFIGURAZIONE_DOMINIO_STAMPA, ISharedConstants.CONFIG_KEY_STAMPA_AGENTE), "0");
-            td.getParameters().put("print_codagente", new Boolean(stampaAgente));
-            td.getParameters().put("SUBREPORT_DIR", baseDir);
+            td.getParameters().put("print_codagente", Boolean.valueOf("1".equals(stampaAgente) || "true".equalsIgnoreCase(stampaAgente)));
+            
+            // Load reports from classpath
+            JasperReport report = ReportLoader.getReport("fatturafornitore.jrxml");
+            JasperReport subreportScadenze = ReportLoader.getReport("fatturafornitore_scadenze.jrxml");
+            
+            td.getParameters().put("SUBREPORT_SCADENZE", subreportScadenze);
+
             byte[] bytes = null;
-            InputStream reportIs = FileUtils.openInputStream(new File(new StringBuilder(baseDir).append(ISharedConstants.FATTURAFORNITORE_REPORT_ID).toString()));
             if ( td.getDataSource() != null )
             {
-                bytes = JasperRunManager.runReportToPdf(reportIs, td.getParameters(), td.getDataSource());
+                bytes = JasperRunManager.runReportToPdf(report, td.getParameters(), td.getDataSource());
             }
             else
             {
-                bytes = JasperRunManager.runReportToPdf(reportIs, td.getParameters(), new JREmptyDataSource());
+                bytes = JasperRunManager.runReportToPdf(report, td.getParameters(), new JREmptyDataSource());
             }
             DocumentoWrapperDto result = new DocumentoWrapperDto();
             result.setFlusso(bytes);
